# IoT

API_ESP/: BasicHttpClient.ino  main.py
API_ESP/measurements/: models.py  router.py  schemas.py  services.py
ButtonMatrix/: README.md  main.ino
ESP_API_MQTT_LEDS/: database.py  main.py
ESP_API_MQTT_LEDS/measurements/: models.py  router.py  schemas.py  services.py
ESP_API_MQTT_LEDS/src/: router.py  schemas.py  services.py
H-bridge/: README.md  init.ino
MorseShieldSoldering/: README.md
StateMachine/: README.md  main.ino  readme.md
ledcube/: README.md  ledcube.ino
machine_bluetorh/: README.md  main.ino
project/: README.md  docker-compose.yml
project/dash/: Dockerfile  main.py  pyproject.toml
project/data_sender/: Config.h  Server.h  Wifi.h  data_sender.ino
project/fastapi/: Dockerfile  main.py  pyproject.toml
