[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Veronika, Zlata"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"